external-crates/move/crates/move-compiler/tests/development/enums/matching/abc_match_twice.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/matching/abc_match_twice.move:3:17
  │
3 │     public enum ABC<T> has drop {
  │                 ^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

